# earworm_sensor

./: CMakeLists.txt  Kconfig  app.overlay  prj.conf  sample.yaml
app/: CMakeLists.txt  prj.conf  sample.yaml
app/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
app/include/: accel.h  ble.h  pfc.h
app/src/: main.c
app/src/accel/: accel.c  filter.c
app/src/ble/: ble.c
app/src/power_failure/: pfc.c
boards/: earworm_nrf54l15_cpuapp.overlay  nrf54l15-prototype.overlay  nrf54l15.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
boards/ami_lab/earworm/: Kconfig.defconfig  Kconfig.earworm  board.yml  earworm-pinctrl.dtsi  earworm_nrf54l15_cpuapp.dts  earworm_nrf54l15_cpuapp.yml  earworm_nrf54l15_cpuapp_defconfig
dataset/: bad_data.csv  good_data.csv  test_bad2.csv  test_good1.csv  test_mix2.csv
dts/bindings/accel/: zephyr,example-sensor.yaml
include/: accel.h  ble.h  pfc.h
scripts/: ble_receive.py  ble_receive_live.py  capVolt.py  live_ML.py  live_plot.py  motionDataset.py  motionDetection.py  motion_model.pth  motion_run.py  motion_test.py  motion_training.py  pulse.py
src/: main.c
src/accel/: accel.c  filter.c
src/ble/: ble.c
src/power_failure/: pfc.c  pfc_WFI.c
